deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "go-marat"
  labels:
    app: "go-marat"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "go-marat"
  template:
    metadata:
      labels:
        app: "go-marat"
    spec:
      containers:
      - name: go-container
        image: mgil214/go-marat:latest
        #        image: eu.gcr.io/marat-245008/service
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
          requests:
            cpu: 10m

---
apiVersion: v1
kind: Service
metadata:
  name: "go-marat"
spec:
  selector:
    app: "go-marat"
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30001
  type: NodePort
