service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-marat-service
spec:
  selector:
    app: go-marat
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30000
